# Aline

./: CMakeLists.txt
cmake/: Config.cmake.in
src/: CMakeLists.txt  aline_global.h  app.cpp  app.h  editableitem.cpp  editableitem.h  editableitemeditor.cpp  editableitemeditor.h  editor.cpp  editor.h  editorfactory.h  editorfactorymanager.cpp  editorfactorymanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/control/: app.cpp  app.h  editableitemactionsmanager.cpp  editableitemactionsmanager.h
src/control/appInterfaces/: recentfileappinterface.cpp  recentfileappinterface.h
src/model/: editableitem.cpp  editableitem.h  editableitemfactory.cpp  editableitemfactory.h  editableitemlist.cpp  editableitemlist.h  editableitemmanager.cpp  editableitemmanager.h  editableitemmanagerfactory.cpp  editableitemmanagerfactory.h
src/model/exceptions/: datasourcebusyexception.cpp  datasourcebusyexception.h  itemioexception.cpp  itemioexception.h
src/model/interfaces/: jsonencodableitem.cpp  jsonencodableitem.h
src/model/labels/: autolabelappinterface.cpp  autolabelappinterface.h  label.cpp  label.h  labelselectionforitemproxymodel.cpp  labelselectionforitemproxymodel.h  labelstree.cpp  labelstree.h  projectfilterbylabelproxymodel.cpp  projectfilterbylabelproxymodel.h
src/model/viewmodel/: editableitemfilteredconnectionproxymodel.cpp  editableitemfilteredconnectionproxymodel.h  externalitemreferencelistmodel.cpp  externalitemreferencelistmodel.h
src/ressources/: aline_ressources.qrc  ressources.qrc
src/tests/: aline_test_global.h  dummyeditableitem.cpp  dummyeditableitem.h  editableitemtestmodel.cpp  editableitemtestmodel.h  referingeditableitem.cpp  referingeditableitem.h  testeditableitemmanager.cpp  testeditableitemmanager.h
src/utils/: jsonutils.cpp  jsonutils.h  stringutils.cpp  stringutils.h
src/utils/view_model/: indexrebasedproxymodel.cpp  indexrebasedproxymodel.h
src/view/: datamsdockwidget.cpp  datamsdockwidget.h  datamsdockwidget.ui  editableitemeditor.cpp  editableitemeditor.h  editableitemqmleditor.cpp  editableitemqmleditor.h  editableitemqmleditor.ui  editableitemtypespecializedaction.cpp  editableitemtypespecializedaction.h  editor.cpp  editor.h  editorfactory.cpp  editorfactory.h  editorfactorymanager.cpp  editorfactorymanager.h  labelitemsdockwidget.cpp  labelitemsdockwidget.h  labelitemsdockwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectlabelsdockwidget.cpp  projectlabelsdockwidget.h  projectlabelsdockwidget.ui  projecttreedockwidget.cpp  projecttreedockwidget.h  projecttreedockwidget.ui  qmleditorfactory.cpp  qmleditorfactory.h
tests/: CMakeLists.txt
tests/test_editableitemlifecycle/: CMakeLists.txt  testeditableitemlifecycle.cpp
tests/test_indexrebasedproxymodel/: CMakeLists.txt  testindexrebasedproxymodel.cpp
tests/test_jsonutils/: CMakeLists.txt  testjsonutils.cpp
tests/test_stringutils/: CMakeLists.txt  teststringsutils.cpp
tests/tests_utils/: CMakeLists.txt  dummyeditableitem.cpp  dummyeditableitem.h  editableitemtestmodel.cpp  editableitemtestmodel.h  referingeditableitem.cpp  referingeditableitem.h  testeditableitemmanager.cpp  testeditableitemmanager.h
